[gd_scene load_steps=13 format=3 uid="uid://cvoiy5pk06wqi"]

[ext_resource type="Script" path="res://minesweeper.gd" id="1_7x103"]
[ext_resource type="Texture2D" uid="uid://vxddt0wejw83" path="res://bitmap/9patch_bw_texture.tres" id="2_8dni1"]
[ext_resource type="PackedScene" uid="uid://bi7dgcbwgxd7j" path="res://counter.tscn" id="3_nlgsr"]
[ext_resource type="Texture2D" uid="uid://sw5od8doucr0" path="res://bitmap/face/button_frame.png" id="4_awbk7"]
[ext_resource type="Texture2D" uid="uid://hco6ldm5p3k2" path="res://bitmap/face/face_happy.tres" id="4_iuhcx"]
[ext_resource type="Texture2D" uid="uid://bfosekfknaxt6" path="res://bitmap/face/face_pressed.tres" id="5_q6t5u"]
[ext_resource type="PackedScene" uid="uid://dexhilxkt3sfx" path="res://gui/menubar/menu_bar.tscn" id="8_kg1x7"]
[ext_resource type="PackedScene" uid="uid://dfye7os5krgij" path="res://gui/title_bar_drag_zone.tscn" id="8_sl2cy"]
[ext_resource type="PackedScene" uid="uid://bagb4oxjuitug" path="res://gui/highscore/fastest_time/fastest_time_modal.tscn" id="10_armt6"]

[sub_resource type="Gradient" id="Gradient_uateg"]
colors = PackedColorArray(0.0509804, 0.152941, 0.423529, 1, 0.65098, 0.792157, 0.941176, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0koes"]
gradient = SubResource("Gradient_uateg")
width = 1024
height = 1

[sub_resource type="TileSet" id="TileSet_4dftg"]

[node name="Minesweeper" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -342.0
offset_bottom = -261.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_7x103")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 21.0
grow_horizontal = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_right = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="FancyGradient" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("GradientTexture2D_0koes")
expand_mode = 2

[node name="Timer" type="Timer" parent="."]

[node name="Window" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8dni1")
region_rect = Rect2(0, 0, 170, 251)
patch_margin_left = 100
patch_margin_top = 205
patch_margin_right = 56
patch_margin_bottom = 26

[node name="MarginContainer" type="MarginContainer" parent="Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 19
theme_override_constants/margin_top = 56
theme_override_constants/margin_right = 17

[node name="Bar" type="HBoxContainer" parent="Window/MarginContainer"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="MineCounter" parent="Window/MarginContainer/Bar" instance=ExtResource("3_nlgsr")]
layout_mode = 2
size_flags_vertical = 4

[node name="FaceButtonFrame" type="TextureRect" parent="Window/MarginContainer/Bar"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_awbk7")
stretch_mode = 3

[node name="FaceButton" type="TextureButton" parent="Window/MarginContainer/Bar/FaceButtonFrame"]
layout_direction = 3
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("4_iuhcx")
texture_pressed = ExtResource("5_q6t5u")

[node name="TimeBox" parent="Window/MarginContainer/Bar" instance=ExtResource("3_nlgsr")]
layout_mode = 2
size_flags_vertical = 4

[node name="Grid" type="TileMap" parent="."]
position = Vector2(15, 96)
tile_set = SubResource("TileSet_4dftg")
format = 2
layer_0/tile_data = PackedInt32Array(2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 524295, 0, 0, 524294, 0, 0, 524293, 0, 0, 524292, 0, 0, 524291, 0, 0, 524290, 0, 0, 524289, 0, 0, 524288, 0, 0, 458752, 0, 0, 393216, 0, 0, 327680, 0, 0, 196608, 0, 0, 131072, 0, 0, 65536, 0, 0, 262144, 0, 0, 0, 0, 0, 65538, 0, 1, 65537, 0, 1, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 65543, 0, 1, 131079, 0, 1, 131078, 0, 1, 131077, 0, 1, 131076, 0, 1, 131075, 0, 1, 131074, 0, 1, 131073, 0, 1, 196609, 0, 1, 196610, 0, 1, 196611, 0, 1, 196612, 0, 1, 196613, 0, 1, 196614, 0, 1, 196615, 0, 1, 262151, 0, 1, 262150, 0, 1, 262149, 0, 1, 262148, 0, 1, 262147, 0, 1, 262146, 0, 1, 327682, 0, 1, 327681, 0, 1, 262145, 0, 1, 327683, 0, 1, 327684, 0, 1, 327685, 0, 1, 327686, 0, 1, 327687, 0, 1, 393223, 0, 1, 393222, 0, 1, 393221, 0, 1, 393220, 0, 1, 393219, 0, 1, 393218, 0, 1, 393217, 0, 1, 458753, 0, 1, 458754, 0, 1, 458755, 0, 1, 458756, 0, 1, 458757, 0, 1, 458758, 0, 1, 458759, 0, 1, 1, 0, 1)
layer_1/name = "overlay"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 21.0
grow_horizontal = 2
theme_override_constants/margin_left = 23
theme_override_constants/margin_right = 55

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3"]
layout_mode = 2
alignment = 1

[node name="TitleBarDragZone" parent="MarginContainer3/HBoxContainer" instance=ExtResource("8_sl2cy")]
layout_mode = 2

[node name="MenuBar" parent="." instance=ExtResource("8_kg1x7")]
layout_mode = 1
anchors_preset = 10
anchor_bottom = 0.0
offset_left = 4.0
offset_top = 22.0
offset_right = 4.0
offset_bottom = 22.0
grow_vertical = 1

[node name="fastest_time_modal" parent="." instance=ExtResource("10_armt6")]
visible = false
layout_mode = 1
anchor_right = 0.912
anchor_bottom = 0.673
offset_left = 3.0
offset_top = 87.0
offset_right = 2.95999
offset_bottom = 87.077

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Window/MarginContainer/Bar/FaceButtonFrame/FaceButton" to="." method="_on_face_button_pressed"]
[connection signal="update_window_position" from="MarginContainer3/HBoxContainer/TitleBarDragZone" to="." method="_on_title_bar_drag_zone_update_window_position"]
[connection signal="change_difficulty" from="MenuBar" to="." method="_on_menu_bar_change_difficulty"]
[connection signal="color_enabled_changed" from="MenuBar" to="." method="_on_menu_bar_color_enabled_changed"]
[connection signal="marks_enabled_changed" from="MenuBar" to="." method="_on_menu_bar_marks_enabled_changed"]
[connection signal="new_game" from="MenuBar" to="." method="_on_menu_bar_new_game"]
[connection signal="sound_enabled_changed" from="MenuBar" to="." method="_on_menu_bar_sound_enabled_changed"]
